# msal-demo

./: .gitignore  GAMEPLAN.md  README.md
aws/: README.md  main.tf  outputs.tf  variables.tf
aws/modules/api_backend/: main.tf  outputs.tf  variables.tf
aws/modules/frontend_site/: main.tf  outputs.tf  variables.tf
azure/: .terraform-version  README.md  main.tf  outputs.tf  variables.tf
backend/: README.md  deploy.sh  pyproject.toml
backend/app/: auth.py  config.py  main.py
frontend/: README.md  deploy.sh  package-lock.json  package.json
frontend/src/: App.css  App.jsx  authConfig.js  main.jsx
frontend/src/hooks/: useApiCall.js
